Fixed import of bootstrap and added WP image alignment in content classes

--- a/css/less.less
+++ b/css/less.less
@@ -1,4 +1,4 @@
-@include "bootstrap.less";
+@import "bootstrap.less";
 
 /*****
 	HTML5 CSS RESET
@@ -11,6 +11,13 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 *****/
 .wrapper													{width: 960px; margin: 0 auto;}
 
+
+/*****
+	WORDPRESS STYLES
+*****/
+.alignleft 													{float: left;}
+.alignright 												{float: right;}
+.aligncenter 												{display: block; margin: 0 auto; clear: both;}
 
 /*****
 	GENERAL STYLING
